doc: goals and eflomal

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -17,6 +17,15 @@
   year={1999}
 }
 
+@inproceedings{mihalcea2003evaluation,
+  title={An evaluation exercise for word alignment},
+  author={Mihalcea, Rada and Pedersen, Ted},
+  booktitle={Proceedings of the HLT-NAACL 2003 Workshop on Building and using parallel texts: data driven machine translation and beyond},
+  pages={1--10},
+  year={2003}
+}
+
+
 @article{varga2007parallel,
   title={Parallel corpora for medium density languages},
   author={Varga, D{\'a}niel and Hal{\'a}csy, P{\'e}ter and Kornai, Andr{\'a}s and Nagy, Viktor and N{\'e}meth, L{\'a}szl{\'o} and Tr{\'o}n, Viktor},
@@ -59,16 +68,16 @@
 }
 
 @inproceedings{dyer-etal-2013-simple,
-    title = "A Simple, Fast, and Effective Reparameterization of {IBM} Model 2",
-    author = "Dyer, Chris  and
-      Chahuneau, Victor  and
-      Smith, Noah A.",
-    booktitle = "Proceedings of the 2013 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies",
-    month = "jun",
-    year = "2013",
-    publisher = "Association for Computational Linguistics",
-    url = "https://www.aclweb.org/anthology/N13-1073",
-    pages = "644--648",
+  title = "A Simple, Fast, and Effective Reparameterization of {IBM} Model 2",
+  author = "Dyer, Chris  and
+    Chahuneau, Victor  and
+    Smith, Noah A.",
+  booktitle = "Proceedings of the 2013 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies",
+  month = "jun",
+  year = "2013",
+  publisher = "Association for Computational Linguistics",
+  url = "https://www.aclweb.org/anthology/N13-1073",
+  pages = "644--648",
 }
 
 
@@ -88,6 +97,17 @@
     eprint={1508.07909},
     archivePrefix={arXiv},
     primaryClass={cs.CL}
+}
+
+@article{ostling2016efficient,
+  title={Efficient word alignment with markov chain monte carlo},
+  author={{\"O}stling, Robert and Tiedemann, J{\"o}rg},
+  journal={The Prague Bulletin of Mathematical Linguistics},
+  volume={106},
+  number={1},
+  pages={125--146},
+  year={2016},
+  publisher={Sciendo}
 }
 
 @misc{kalchbrenner2016neural,
